# mailmap-linter

./: .envrc  .gitignore  Cargo.toml  README.md  default.nix  flake.nix
pkgs/ci/: default.nix
pkgs/default/: default.nix
src/: git.rs  lib.rs  main.rs  validation.rs
tests/: integration.rs
