[package]
name = "mailmap-linter"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", default-features = false, features = ["std", "derive"] }
regex = { version = "1", default-features = true, features = ["unicode-perl"] }
anyhow = { version = "1", default-features = false }
tracing = { version = "0.1", default-features = false, features = ["std"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "ansi", "env-filter"] }

[dev-dependencies]
assert_cmd = { version = "2", default-features = false, features = ["color"] }
tempfile = { version = "3", default-features = false }
predicates = { version = "3", default-features = false, features = ["regex"] }
